--- a/Objetos/Ejercicio_41/ejercicio_41.css
+++ b/Objetos/Ejercicio_41/ejercicio_41.css
@@ -68,3 +68,11 @@ fieldset{
     float: right;
     margin-right: 30px;            
 }
+
+.tabla, .tabla td, .tabla tr, tr th{
+    
+    border: 1px solid black;
+    border-collapse: collapse;
+    text-align: center;
+    
+}
